--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     .navbar-links {
         font-family: 'Poppins', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 25px;
+        font-weight: bold;
+        font-size: 22px;
         line-height: 33px;
     }
     
@@ -1458,7 +1458,7 @@ upto Rs 1 Lakh per month.
 
                                             <div class="testimonials_card-body">
                                                 <h6 class="testimonials_card-title" style="text-align:center;color:#1D2F6F;font-size:20px;font-family:poppins;">Sweety Jaiswal</h6>
-                                                <p class="testimonials_card-text" style=" font-size:12px;color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">Team TalentServe is really doing a great job to help the students.The learning is made so simple. I'm really honoured to be a part of it. All the best and Thank You very much.</p>
+                                                <p class="testimonials_card-text" style=" font-size:15px; color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">Team TalentServe is really doing a great job to help the students.The learning is made so simple. I'm really honoured to be a part of it. All the best and Thank You very much.</p>
                                                 <div class="row" style="margin-bottom:90px;"> </div>
                                             </div>
                                         </div>
@@ -1489,7 +1489,7 @@ upto Rs 1 Lakh per month.
 
                                             <div class="testimonials_card-body">
                                                 <h6 class="testimonials_card-title" style="text-align:center;color:#1D2F6F;font-size:20px;font-family:poppins">Ankit Agarwal</h6>
-                                                <p class="testimonials_card-text" style=" font-size:12px;color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">I am writing to express my gratitude to the all the team members of TalentServe who helped me successfully secure the role of Technical Consultant. I also appreciate their fast response, transparent communication
+                                                <p class="testimonials_card-text" style=" font-size:14px;color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">I am writing to express my gratitude to the all the team members of TalentServe who helped me successfully secure the role of Technical Consultant. I also appreciate their fast response, transparent communication
                                                     and co-ordination in a timely and efficient manner.
                                                 </p>
                                                 <div class="row" style="margin-top:60px;"> </div>
@@ -1520,7 +1520,7 @@ upto Rs 1 Lakh per month.
 
                                             <div class="testimonials_card-body">
                                                 <h6 class="testimonials_card-title" style="text-align:center;color:#1D2F6F;font-size:20px;font-family:poppins">Kunal Thakkar</h6>
-                                                <p class="testimonials_card-text" style=" font-size:12px;color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">I have enrolled myself for Saarathii Initiative through my college. The quality of the tutorial videos that they have made can help any student. The 1:1 Mentoring session and the mock interviews gave me
+                                                <p class="testimonials_card-text" style=" font-size:14px;color:#1D2F6F;text-align: left;font-family:poppins;padding-right: 10px;padding-left: 10px;">I have enrolled myself for Saarathii Initiative through my college. The quality of the tutorial videos that they have made can help any student. The 1:1 Mentoring session and the mock interviews gave me
                                                     a better idea to prepare for my career.</p>
                                                 <div class="row" style="margin-bottom:55px;"> </div>
                                             </div>
